--- a/MyBookshelf.App/Components/Pages/Home.razor
+++ b/MyBookshelf.App/Components/Pages/Home.razor
@@ -1,5 +1,22 @@
 ﻿@page "/"
+@inherits MyBookshelf.App.Components.Pages.HomeBase
 
-<h1>Hello, world!</h1>
+<h1>My Bookshelf</h1>
 
-Welcome to your new app.
+@if (Books != null && Books.Any())
+{
+    @foreach (var book in Books)
+    {
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">@book.Title by @book.Author</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    }
+}
+else {
+    <p>Vous n'avez pas encore de livres dans votre bibliothèque.</p>
+    <button>Ajouter mon premier livre</button>
+}
