Handle AddBook form

--- a/MyBookshelf.App/Components/Pages/Home.razor
+++ b/MyBookshelf.App/Components/Pages/Home.razor
@@ -18,5 +18,7 @@
 }
 else {
     <p>Vous n'avez pas encore de livres dans votre bibliothèque.</p>
-    <button>Ajouter mon premier livre</button>
+    <button>
+        <a href="/Ajouter">Ajouter mon premier livre</a>
+    </button>
 }
