Handle AddBook form validation

--- a/MyBookshelf.App/Components/Pages/Home.razor
+++ b/MyBookshelf.App/Components/Pages/Home.razor
@@ -18,7 +18,7 @@
 }
 else {
     <p>Vous n'avez pas encore de livres dans votre bibliothèque.</p>
-    <button>
-        <a href="/Ajouter">Ajouter mon premier livre</a>
+    <button class="btn btn-primary">
+        <a href="/addbook" class="text-light">Ajouter mon premier livre</a>
     </button>
 }
