--- a/MyBookshelf.App/Components/Pages/Home.razor
+++ b/MyBookshelf.App/Components/Pages/Home.razor
@@ -11,9 +11,9 @@
             <div class="card-body">
                 <h5 class="card-title">@book.Title by @book.Author</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary m-1 text-light">Go somewhere</a>
+                <a href="@($"/bookdetail/{@book.Id}")" class="btn btn-primary m-1 text-light">Détail</a>
                 <button @onclick="@(async () => await RemoveBookAsync(book))" class="btn btn-danger m-1 text-light">Supprimer</button>
-                <button @onclick="@(() => NavigateToBookId(book))" class="text-light btn btn-warning m-1">Éditer</button>
+                <button @onclick="@(() => NavigateToBookEdit(book))" class="text-light btn btn-warning m-1">Éditer</button>
             </div>
         </div>
     }
